[DBG] simplify research section

--- a/index.html
+++ b/index.html
@@ -210,18 +210,9 @@
                 <h2 class="mb-5">Research</h2>
 
                 <p class="mb-5 text-primary">
-                    I am very grateful to have mentors and collaborators with whom I have the honor to work on various interesting problems spanning vision neuroscience, mathematical biology, artificial intelligence, reinforcement learning, genome sciences, protein design, computational psychiatry, and human-computer interaction. I also maintain close industrial collaborations with IBM Research and Microsoft Research. 
+                    I am very grateful to have mentors and collaborators with whom I have the honor to work on various interesting problems spanning <span style="color: blue;"> neuroscience (NS)</span>, <span style="color: red;">machine learning (ML)</span>, <span style="color: chocolate;"> computer vision (CV)</span>, <span style="color: purple;"> geometric/topological inference (GT)</span>, <span style="color: forestgreen;"> systems biology/genomics (SB)</span>, <span style="color: teal;"> applied mathematics (AM)</span>, <span style="color: brown;"> human-computer interaction (HCI)</span>, <span style="color: orange;"> Bayesian statistics (BS)</span>, and <span style="color: salmon;"> translational medicine/psychiatry (TM) </span>. I also maintain close industrial collaborations with IBM Research and Microsoft Research. 
                 </p>
-                <p class="mb-5 text-primary">
-                    Research by areas: <span style="color: blue;"> neuroscience (NS)</span>, <span style="color: red;">machine learning (ML)</span>, <span style="color: chocolate;"> computer vision (CV)</span>, <span style="color: purple;"> geometric topology (GT)</span>, <span style="color: forestgreen;"> systems biology (SB)</span>, <span style="color: teal;"> applied mathematics (AM)</span>, <span style="color: brown;"> human-computer interaction (HCI)</span>, <span style="color: orange;"> Bayesian statistics (BS)</span>, <span style="color: salmon;"> translational medicine (TM) </span>.
-                </p>
-                
-                <!-- <p class="mb-5 text-primary">
-                    I am very grateful to have mentors and collaborators with whom I have the honor to work on various interesting problems spanning vision neuroscience, mathematical biology, artificial intelligence, reinforcement learning, genome sciences, protein design, computational psychiatry, and human-computer interaction. I also maintain close industrial collaborations with IBM Research and Microsoft Research. 
-                </p>
-                <p class="mb-5 text-primary">
-                    Research by areas: <span style="color: blue;"> neuroscience (NS)</span>, <span style="color: red;">machine learning (ML)</span>, <span style="color: chocolate;"> computer vision (CV)</span>, <span style="color: purple;"> geometric topology (GT)</span>, <span style="color: forestgreen;"> systems biology (SB)</span>, <span style="color: teal;"> applied mathematics (AM)</span>, <span style="color: brown;"> human-computer interaction (HCI)</span>, <span style="color: orange;"> Bayesian statistics (BS)</span>, <span style="color: salmon;"> translational medicine (TM) </span>.
-                </p> -->
+
                 <p class="mb-5 text-primary">
                 <table align="left" class="mb-5 text-primary">
                     <tr bgcolor="lightgrey">
@@ -261,7 +252,7 @@
                         <td>&nbsp; now </td>
                         <td>&nbsp; </td>
                         <td>&nbsp; Neuro Theory Center (PI: Qian) </td>
-                        <td>&nbsp; <a href="#p10">[10]</a></td>
+                        <td>&nbsp; <a href="#p10">[10]</a><a href="#p20">[20]</a></td>
                         <td>&nbsp; <span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: orange;">BS</span> </td>
                     </tr>
                     <tr>
@@ -344,7 +335,7 @@
         <img src="./img/publications/lin2019unsupervised.png" alt="lin2019reinforce" border="1" style="width:100%">
         </div>
         <div class="textcolumn">
-        [20]&nbsp;<b class="text-primary" id="p18"> Unsupervised Attention Mechanism across Neural Network Layers &nbsp; </b>
+        [20]&nbsp;<b class="text-primary" id="p20"> Unsupervised Attention Mechanism across Neural Network Layers &nbsp; </b>
         <br />
         <b><span style="color: dimgray;">Baihan Lin</span></b>
         <br /><br/>
