--- a/proj/dynRSA/index.html
+++ b/proj/dynRSA/index.html
@@ -1,172 +1,1 @@
-
-
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="Baihan Lin's personal website">
-        <meta name="author" content="Baihan Lin">
-        <title>Baihan Lin</title>
-        <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
-        <link href="../../css/bootstrap.css" rel="stylesheet">
-        <link href="../../css/resume.css" rel="stylesheet">
-        <link href="../../css/font-awesome.css" rel="stylesheet">
-        <link href="../../css/devicons.css" rel="stylesheet">
-        <link href="../../css/simple-line-icons.css" rel="stylesheet">
-    </head>
-    <body id="indexpage">
-        <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top" id="sideNav">
-            <h3 class="bottom-some"><a style="color:#ffffff;display:inline;text-transform:none;" href="../../#">Baihan Lin&nbsp;&nbsp;</a></h3>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="../../#about">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="../../#research">Research</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="../../#publications">Publications</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="../../#life">Life</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="../../bits">Bits</a>
-                    </li>
-                    <li><span class="nav-link js-scroll-trigger will-gone"><br/><br/></span></li>
-                    <ul class="list-inline list-social-icons mb-0 top-some">
-                        <li class="list-adaptive-item">
-                            <a href="https://www.linkedin.com/in/doerlbh/">
-                            <span class="fa-stack fa-md">
-                            <i class="fa fa-circle fa-stack-2x"></i>
-                            <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-                            </span>
-                            </a>
-                        </li>
-                        <li class="list-adaptive-item">
-                            <a href="https://github.com/doerlbh">
-                            <span class="fa-stack fa-md">
-                            <i class="fa fa-circle fa-stack-2x"></i>
-                            <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                            </span>
-                            </a>
-                        </li>
-                        <li class="list-adaptive-item">
-                            <a href="https://www.instagram.com/doerlbh/">
-                            <span class="fa-stack fa-md">
-                            <i class="fa fa-circle fa-stack-2x"></i>
-                            <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
-                            </span>
-                            </a>
-                        </li>
-                        <li class="list-adaptive-item">
-                            <a href="https://www.facebook.com/doerlbh">
-                            <span class="fa-stack fa-md">
-                            <i class="fa fa-circle fa-stack-2x"></i>
-                            <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                            </span>
-                            </a>
-                        </li>
-                        <li class="list-adaptive-item">
-                            <a href="https://scholar.google.com/citations?user=H67KJ4cAAAAJ&hl=en">
-                            <span class="fa-stack fa-md">
-                            <i class="fa fa-circle fa-stack-2x"></i>
-                            <i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i>
-                            </span>
-                            </a>
-                        </li>
-                        <li class="list-adaptive-item">
-                            <a href="https://twitter.com/doerlbh">
-                            <span class="fa-stack fa-md">
-                            <i class="fa fa-circle fa-stack-2x"></i>
-                            <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                            </span>
-                            </a>
-                        </li>
-                    </ul>
-                    <li class="nav-item will-gone">
-                        <span class="nav-link js-scroll-trigger"> &#x21E7;<br/>see me at</span>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top" id="projNav">
-            <h3 class="bottom-some"><a style="color:#ffffff;display:inline;text-align:left;text-transform:none" href="../../#project">some cool projects I do</a></h3>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="../mentalRL">mental RL</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="../dynRSA"> dynamic RSA</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="../topology">topology</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="../neuralMDL">neural MDL</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="../tensegrity">tensegrity</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="../proteindesign">protein design</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="../pinocchio"> pinocchio VR</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="../osteoapp"> OsteoApp </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="../patch"> quanti patch </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#"></a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        <div class="container-fluid p-0">
-            <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="">
-                <div class="my-auto">
-                    <h2 class="mb-5">more details to come~</h2>
-
-                    <b class="text-primary"> more details to come~ &nbsp; </b>
-                    <p class="mb-5 text-primary">
-                        <br> In the meanwhile, here is a picture of my cats taking a nap...
-                        <br>
-                    <img src="../../img/random/sleep.jpg" alt="" class="photo">
-                    </p>
-                    
-                </div>
-            </section>
-        </div>
-        <!-- Bootstrap core JavaScript -->
-        <script src="../../js/jquery.min.js"></script>
-        <script src="../../js/bootstrap.bundle.js"></script>
-        <!-- Plugin JavaScript -->
-        <script src="../../js/jquery.easing.js"></script>
-        <!-- Custom scripts for this template -->
-        <script src="../../js/resume.js"></script>
-    </body>
-    <!-- 
-        <div class="flier2"><img src="img/random/rock.png" alt="" style="width:500px;height:300px;"></div>
-        
-        <div class="flier"><img src="img/random/doge.png" alt="" style="width:300px;height:400px;"></div>
-         -->
-     <footer style="align:center;">&copy; Copyright 2016<script>new Date().getFullYear()>2016&&document.write("-"+new Date().getFullYear());</script> by Baihan Lin</footer>
-</html>
-
+<meta http-equiv="refresh" content="0; URL='https://baihan.nyc/proj/proj'" />
