--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="publications">
         <div class="my-auto">
         <h2 class="mb-5">Publications</h2>
-        <p class="mb-5 text-primary"> <b>20</b> total = <b>10</b> conferences + <b>6</b> journals + <b>4</b> manuscript / arXiv preprints &nbsp; </p>
+        <p class="mb-5 text-primary"> <b>20</b> total = <b>10</b> conferences + <b>6</b> journals + <b>4</b> manuscript / arXiv preprints &nbsp; <br /> (click on <b> abstract </b> to learn more) &nbsp;  </p>
         <h3> ongoing...</h3>
         <br />
         <ul class="fa-ul mb-0">
