[FEAT] resize table to full width

--- a/index.html
+++ b/index.html
@@ -216,108 +216,108 @@
                 <p class="mb-5 text-primary">
                 <table align="left" class="mb-5 text-primary">
                     <tr bgcolor="lightgrey">
-                        <th>&nbsp; From </th>
-                        <th>&nbsp; To </th>
-                        <th>&nbsp; At </th>
-                        <th>&nbsp; With </th>
-                        <th>&nbsp; Published </th>
-                        <th>&nbsp; On </th>
+                        <th> From </th>
+                        <th> To </th>
+                        <th> At </th>
+                        <th> With </th>
+                        <th> Published </th>
+                        <th> On </th>
                     </tr>
                     <tr>
-                        <td>&nbsp; 2017 </td>
-                        <td>&nbsp; now </td>
-                        <td>&nbsp; IBM </td>
-                        <td>&nbsp; CompNeuro & AI Foundations Groups</td>
-                        <td>&nbsp; <a href="#p7">[7]</a><a href="#p8">[8]</a><a href="#p11">[11]</a><a href="#p15">[15]</a><a href="#p18">[18]</a> </td>
-                        <td>&nbsp; <span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: salmon;">TM</span> </td>
+                        <td> 2017 </td>
+                        <td> now </td>
+                        <td> IBM </td>
+                        <td> CompNeuro & AI Foundations Groups</td>
+                        <td> <a href="#p7">[7]</a><a href="#p8">[8]</a><a href="#p11">[11]</a><a href="#p15">[15]</a><a href="#p18">[18]</a> </td>
+                        <td> <span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: salmon;">TM</span> </td>
                     </tr>
                     <tr>
-                        <td>&nbsp; 2017 </td>
-                        <td>&nbsp; 2017 </td>
-                        <td>&nbsp; Microsoft </td>
-                        <td>&nbsp; EPIC & HCI Groups </td>
-                        <td>&nbsp; <a href="#p19">[19]</a></td>
-                        <td>&nbsp; <span style="color: blue;">NS</span>,<span style="color: chocolate;">CV</span>,<span style="color: brown;">HCI</span></td>
+                        <td> 2017 </td>
+                        <td> 2017 </td>
+                        <td> Microsoft </td>
+                        <td> EPIC & HCI Groups </td>
+                        <td> <a href="#p19">[19]</a></td>
+                        <td> <span style="color: blue;">NS</span>,<span style="color: chocolate;">CV</span>,<span style="color: brown;">HCI</span></td>
                     </tr>
                     <tr>
-                        <td>&nbsp; 2018 </td>
-                        <td>&nbsp; now </td>
-                        <td>&nbsp; Columbia </td>
-                        <td>&nbsp; Visual Inference Lab (PI: Kriegeskorte) </td>
-                        <td>&nbsp; <a href="#p9">[9]</a><a href="#p14">[14]</a><a href="#p17">[17]</a></td>
-                        <td>&nbsp; <span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span> </td>
+                        <td> 2018 </td>
+                        <td> now </td>
+                        <td> Columbia </td>
+                        <td> Visual Inference Lab (PI: Kriegeskorte) </td>
+                        <td> <a href="#p9">[9]</a><a href="#p14">[14]</a><a href="#p17">[17]</a></td>
+                        <td> <span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span> </td>
                     </tr>
                     <tr>
-                        <td>&nbsp; 2018 </td>
-                        <td>&nbsp; now </td>
-                        <td>&nbsp; </td>
-                        <td>&nbsp; Neuro Theory Center (PI: Qian) </td>
-                        <td>&nbsp; <a href="#p10">[10]</a><a href="#p20">[20]</a></td>
-                        <td>&nbsp; <span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: orange;">BS</span> </td>
+                        <td> 2018 </td>
+                        <td> now </td>
+                        <td> </td>
+                        <td> Neuro Theory Center (PI: Qian) </td>
+                        <td> <a href="#p10">[10]</a><a href="#p20">[20]</a></td>
+                        <td> <span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: orange;">BS</span> </td>
                     </tr>
                     <tr>
-                        <td>&nbsp; 2018 </td>
-                        <td>&nbsp; 2018 </td>
-                        <td>&nbsp; </td>
-                        <td>&nbsp; Math Genomics Lab of DSB (PI: Rabadan) </td>
-                        <td>&nbsp; <a href="#p13">[13]</a><a href="#p17">[17]</a></td>
-                        <td>&nbsp; <span style="color: forestgreen;">SB</span>,<span style="color: red;">ML</span>,<span style="color: purple;">GT</span> </td>
+                        <td> 2018 </td>
+                        <td> 2018 </td>
+                        <td> </td>
+                        <td> Math Genomics Lab of DSB (PI: Rabadan) </td>
+                        <td> <a href="#p13">[13]</a><a href="#p17">[17]</a></td>
+                        <td> <span style="color: forestgreen;">SB</span>,<span style="color: red;">ML</span>,<span style="color: purple;">GT</span> </td>
                     </tr>
                     <tr>
-                        <td>&nbsp; 2017 </td>
-                        <td>&nbsp; 2017 </td>
-                        <td>&nbsp; </td>
-                        <td>&nbsp; Comp Bio Lab of CS (PI: Pe’er) </td>
-                        <td>&nbsp; <a href="#p6">[6]</a>&nbsp;</td>
-                        <td>&nbsp; <span style="color: forestgreen;">SB</span>,<span style="color: red;">ML</span>,<span style="color: salmon;">TM</span> </td>
+                        <td> 2017 </td>
+                        <td> 2017 </td>
+                        <td> </td>
+                        <td> Comp Bio Lab of CS (PI: Pe’er) </td>
+                        <td> <a href="#p6">[6]</a>&nbsp;</td>
+                        <td> <span style="color: forestgreen;">SB</span>,<span style="color: red;">ML</span>,<span style="color: salmon;">TM</span> </td>
                     </tr>
                     <tr>
-                        <td>&nbsp; 2017 </td>
-                        <td>&nbsp; 2017 </td>
-                        <td>&nbsp; UW </td>
-                        <td>&nbsp; UbiComp Lab of CSE & EE (PI: Patel) </td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp; <span style="color: brown;">HCI</span>,<span style="color: red;">ML</span>,<span style="color: salmon;">TM</span> </td>
+                        <td> 2017 </td>
+                        <td> 2017 </td>
+                        <td> UW </td>
+                        <td> UbiComp Lab of CSE & EE (PI: Patel) </td>
+                        <td> </td>
+                        <td> <span style="color: brown;">HCI</span>,<span style="color: red;">ML</span>,<span style="color: salmon;">TM</span> </td>
                     </tr>
                     <tr>
-                        <td>&nbsp; 2015 </td>
-                        <td>&nbsp; 2017 </td>
-                        <td>&nbsp; </td>
-                        <td>&nbsp; Institute for Protein Design (PI: Baker) </td>
-                        <td>&nbsp; <a href="#p12">[12]</a></td>
-                        <td>&nbsp; <span style="color: forestgreen;">SB</span> </td>
+                        <td> 2015 </td>
+                        <td> 2017 </td>
+                        <td> </td>
+                        <td> Institute for Protein Design (PI: Baker) </td>
+                        <td> <a href="#p12">[12]</a></td>
+                        <td> <span style="color: forestgreen;">SB</span> </td>
                     </tr>
                     <tr>
-                        <td>&nbsp; 2016 </td>
-                        <td>&nbsp; 2016 </td>
-                        <td>&nbsp; </td>
-                        <td>&nbsp; Biophysics Lab of Applied Math (PI: Qian) &nbsp; &nbsp;</td>
-                        <td>&nbsp; </td>
-                        <td>&nbsp; <span style="color: teal;">AM</span>,<span style="color: forestgreen;">SB</span></td>
+                        <td> 2016 </td>
+                        <td> 2016 </td>
+                        <td> </td>
+                        <td> Biophysics Lab of Applied Math (PI: Qian) &nbsp; &nbsp;</td>
+                        <td> </td>
+                        <td> <span style="color: teal;">AM</span>,<span style="color: forestgreen;">SB</span></td>
                     </tr>
                     <tr>
-                        <td>&nbsp; 2014 </td>
-                        <td>&nbsp; 2016 </td>
-                        <td>&nbsp; </td>
-                        <td>&nbsp; Vision Neuroscience Lab (PI: Olavarria) </td>
-                        <td>&nbsp; <a href="#p2">[2]<a><a href="#p16">[16]</a></td>
-                        <td>&nbsp; <span style="color: blue;">NS</span>,<span style="color: chocolate;">CV</span> </td>
+                        <td> 2014 </td>
+                        <td> 2016 </td>
+                        <td> </td>
+                        <td> Vision Neuroscience Lab (PI: Olavarria) </td>
+                        <td> <a href="#p2">[2]<a><a href="#p16">[16]</a></td>
+                        <td> <span style="color: blue;">NS</span>,<span style="color: chocolate;">CV</span> </td>
                     </tr>
                     <tr>
-                        <td>&nbsp; 2014 </td>
-                        <td>&nbsp; 2017 </td>
-                        <td>&nbsp; BIME </td>
-                        <td>&nbsp; State Key Lab of Pathogen & Biosecurity </td>
-                        <td>&nbsp; <a href="#p1">[1]</a><a href="#p3">[3]<a><a href="#p4">[4]</a><a href="#p5">[5]</a></td>
-                        <td>&nbsp; <span style="color: forestgreen;">SB</span>,<span style="color: teal;">AM</span>,<span style="color: salmon;">TM</span></td>
+                        <td> 2014 </td>
+                        <td> 2017 </td>
+                        <td> BIME </td>
+                        <td> State Key Lab of Pathogen & Biosecurity </td>
+                        <td> <a href="#p1">[1]</a><a href="#p3">[3]<a><a href="#p4">[4]</a><a href="#p5">[5]</a></td>
+                        <td> <span style="color: forestgreen;">SB</span>,<span style="color: teal;">AM</span>,<span style="color: salmon;">TM</span></td>
                     </tr>
                     <tr>
-                        <td>&nbsp; 2013 </td>
-                        <td>&nbsp; 2013 </td>
-                        <td>&nbsp; BGI </td>
-                        <td>&nbsp; Personalized Genome Group </td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp; <span style="color: forestgreen;">SB</span>,<span style="color: salmon;">TM</span></td>
+                        <td> 2013 </td>
+                        <td> 2013 </td>
+                        <td> BGI </td>
+                        <td> Personalized Genome Group </td>
+                        <td> </td>
+                        <td> <span style="color: forestgreen;">SB</span>,<span style="color: salmon;">TM</span></td>
                     </tr>
                 </table>
                 </p>
