[FEAT] add anti-mailharvesting feature

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <!-- <span class="text-primary"> -->
                     <!-- <h1 class="mb-0" style="display:inline"> L</h1><h2 class="mb-0" style="font-size:75px;display:inline">in</h2></span> -->
                     <div class="subheading mb-5" style="text-transform:none">Columbia University · New York City · (206) 915-1164 ·
-                        <a href="mailto:doerlbh@gmail.com">doerlbh@gmail.com</a><br/>
+                        <a href="mailto:doerlbh@gmail.com">doerlbh@<span style="display:none;">-ignoreme-</span>gmail.com</a><br/>
                     </div>
                 </div>
                 <p class="mb-5 text-primary">
