--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         <br /><br/>
         <p style="color:black"> under review </p>
         [
-        arXiv to come
+        <a href="https://arxiv.org/abs/1902.10658" style="color:#3498db">arXiv</a>
         ]&nbsp; [
         <a href="https://github.com/doerlbh/UnsupervisedAttentionMechanism" style="color:#3498db">code</a>
         ]&nbsp; [
