[FEAT] enable related work

--- a/bits/index.html
+++ b/bits/index.html
@@ -135,6 +135,12 @@
                     <li class="nav-item">
                         <span class="nav-link js-scroll-trigger"></span>
                     </li>
+                    <!-- <li class="nav-item">
+                        <span class="nav-link js-scroll-trigger"><br/><br /><br /><br /></span>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="../proj/related"> related </a>
+                    </li> -->
                 </ul>
             </div>
         </nav>
