--- a/proj/related/index.html
+++ b/proj/related/index.html
@@ -136,26 +136,23 @@
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#"></a>
                     </li>
-                    <!-- <li class="nav-item">
+                    <li class="nav-item">
                         <span class="nav-link js-scroll-trigger"><br/><br /><br /><br /></span>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="../related"> related </a>
-                    </li> -->
+                        <a class="nav-link js-scroll-trigger" href="proj/related"> related </a>
+                    </li> 
                 </ul>
             </div>
         </nav>
         <div class="container-fluid p-0">
             <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="">
                 <div class="my-auto">
-                    <h2 class="mb-5">more details to come~</h2>
+                    <h2 class="mb-5">Related Works</h2>
 
-                    <b class="text-primary"> more details to come~ &nbsp; </b>
-                    <p class="mb-5 text-primary">
-                        <br> In the meanwhile, here is a picture of my cats taking a nap...
-                        <br>
-                    <img src="../../img/random/sleep.jpg" alt="" class="photo">
-                    </p>
+                    <h3 style="text-transform:none;">Recurrent networks</h3>
+
+                    <p> more details to come~ &nbsp; </p>
                     
                 </div>
             </section>
