[DBG] fix related works titles

--- a/proj/related/index.html
+++ b/proj/related/index.html
@@ -140,7 +140,7 @@
                         <span class="nav-link js-scroll-trigger"><br/><br /><br /><br /></span>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="proj/related"> related </a>
+                        <a class="nav-link js-scroll-trigger" href="#"> related </a>
                     </li> 
                 </ul>
             </div>
@@ -150,10 +150,169 @@
                 <div class="my-auto">
                     <h2 class="mb-5">Related Works</h2>
 
-                    <h3 style="text-transform:none;">Recurrent networks</h3>
+                    <p class="text-primary"> These are papers I am reading and thinking upon, mostly as a bookkeeping for myself. &nbsp; </p>
+
+                    <h3 class="field-title">Recurrent Neural Networks</h3>
+
+                    <p class="text-primary">
+                    <table align="left" class="mb-5 text-primary field-table">
+                    <tr>
+                        <td> 2018 </td>
+                        <td> NIPS </td>
+                        <td> Han et al. </td>
+                        <td> Deep Predictive Coding Network for Object Recognition </td>
+                        <td> <a href="https://arxiv.org/abs/1802.04762">link</a></td>
+                        <td>  </td>
+                    </tr>
+                    </table>
+                    </p>
+
+
+                    <h3 class="field-title">Reinforcement Learning</h3>
+
+                    <p class="text-primary">
+                    <table align="left" class="mb-5 text-primary field-table">
+                    <tr>
+                        <td> 2019 </td>
+                        <td> ICLR </td>
+                        <td> Marino et al. </td>
+                        <td> Hierarchical RL Using an Ensemble of Proprioceptive Periodic Policies  </td>
+                        <td> <a href="https://openreview.net/forum?id=SJz1x20cFQ">link</a> </td>
+                        <td> diff feature </td>
+                    </tr>
+                    <tr>
+                        <td> 2019 </td>
+                        <td> ICLR </td>
+                        <td> Eysenbach et al. </td>
+                        <td> Diversity is All You Need: Learning Skills without a Reward Function  </td>
+                        <td> <a href="https://arxiv.org/abs/1802.06070">link</a> </td>
+                        <td> max entropy </td>
+                    </tr>
+                    </table>
+                    </p>
+
+
+                    <h3 class="field-title">Theory of Deep Learning</h3>
+
+                    <p class="text-primary">
+                    <table align="left" class="mb-5 text-primary field-table">
+                    <tr>
+                        <td> 2015 </td>
+                        <td> arXiv </td>
+                        <td> Tishby & Zaslavsky </td>
+                        <td> Deep Learning and the Information Bottleneck Principle </td>
+                        <td> <a href="https://arxiv.org/abs/1503.02406">link</a></td>
+                        <td>  </td>
+                    </tr>
+                    </table>
+                    </p>
+
+                    <h3 class="field-title">Theoretical Computer Science</h3>
+
+                    <p class="text-primary">
+                    <table align="left" class="mb-5 text-primary field-table">
+                    <tr>
+                        <td> 2019 </td>
+                        <td> ITCS </td>
+                        <td> C.S. & Manurangsi </td>
+                        <td> On Closest Pair in Euclidean Metric: Monochromatic is as Hard as Bichromatic </td>
+                        <td> <a href="https://arxiv.org/abs/1812.00901">link</a></td>
+                        <td> </td>
+                    </tr>
+                    </table>
+                    </p>
+
+
+                    <h3 class="field-title">Neural Dynamics and Dynamical Systems</h3>
+
+                    <p class="text-primary">
+                    <table align="left" class="mb-5 text-primary field-table">
+                    <tr>
+                        <td> 2010 </td>
+                        <td> Nature Physics </td>
+                        <td> Chialvo </td>
+                        <td> Emergent complex neural dynamics </td>
+                        <td> <a href="https://arxiv.org/abs/1010.2530">link</a></td>
+                        <td> goodintro </td>
+                    </tr>
+                    </table>
+                    </p>
+
+
+                    <h3 class="field-title">Representation Theory and Geometry</h3>
+
+                    <p class="text-primary">
+                    <table align="left" class="mb-5 text-primary field-table">
+                    <tr>
+                        <td> 2011 </td>
+                        <td> MIT </td>
+                        <td> Etingof et al. </td>
+                        <td> Introduction to representation theory </td>
+                        <td> <a href="http://www-math.mit.edu/~etingof/replect.pdf">link</a></td>
+                        <td> goodintro </td>
+                    </tr>
+                    <tr>
+                        <td> 2018 </td>
+                        <td> arXiv </td>
+                        <td> Williamson </td>
+                        <td> Parity sheaves and the Hecke category </td>
+                        <td> <a href="https://arxiv.org/abs/1801.00896">link</a></td>
+                        <td> </td>
+                    </tr>
+                    <tr>
+                        <td> 2017 </td>
+                        <td> arXiv </td>
+                        <td> Lusztig & Williamson </td>
+                        <td> Billiards and Tilting Characters for SL3 </td>
+                        <td> <a href="https://arxiv.org/abs/1703.05898">link</a> </td>
+                        <td> interesting data </td>
+                    </tr>
+                    </table>
+                    </p>
+
+                    <h3 class="field-title">Computational Geometry and Applied Topology</h3>
+
+                    <p class="text-primary">
+                    <table align="left" class="mb-5 text-primary field-table">
+                    <tr>
+                        <td> 2015 </td>
+                        <td> SoCG </td>
+                        <td> Boissonnat et al. </td>
+                        <td> Building Efficient and Compact Data Structures for Simplicial Complexes </td>
+                        <td> <a href="https://arxiv.org/abs/1503.07444">link</a></td>
+                        <td>  </td>
+                    </tr>
+                    </table>
+                    </p>
+
+
+                    <h3 class="field-title">Information Theory and Information Geometry</h3>
+
+                    <p class="text-primary">
+                    <table align="left" class="mb-5 text-primary field-table">
+                    <tr>
+                        <td> 2015 </td>
+                        <td> ICML </td>
+                        <td> Sun et al. </td>
+                        <td>  Information Geometry and Minimum Description Length Networks </td>
+                        <td> <a href="http://proceedings.mlr.press/v37/suna15.pdf">link</a></td>
+                        <td>  </td>
+                    </tr>
+                    </table>
+                    </p>
+
+
+                    <h3 class="field-title">Data Visualization</h3>
 
                     <p> more details to come~ &nbsp; </p>
-                    
+
+
+                    <h3 class="field-title">Human Computer Interaction</h3>
+
+                    <p> more details to come~ &nbsp; </p>
+
+
+
                 </div>
             </section>
         </div>
