[DBG] update minor details in publications

--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
         <br /><br/>
         <p style="color:black"> IJCAI 2019 Workshop on Human Brain and Artificial Intelligence (HBAI) </p>
         [
-        <a href="https://arxiv.org/abs/1902.10658" style="color:#3498db">arXiv</a>
+        <a href="https://arxiv.org/abs/1902.10658v7" style="color:#3498db">arXiv</a>
         ]&nbsp; [
         <a href="./pdfs/IJCAI_RN_slides.pdf" style="color:#3498db">slides</a>
         ]&nbsp; [
