--- a/proj/related/index.html
+++ b/proj/related/index.html
@@ -150,7 +150,7 @@
                 <div class="my-auto">
                     <h2 class="mb-5">Related Works</h2>
 
-                    <p class="text-primary"> These are papers I am reading and thinking upon, mostly as a bookkeeping for myself. &nbsp; </p>
+                    <p class="text-primary"> These are the papers I am reading and thinking upon, mostly as a bookkeeping for myself. &nbsp; </p>
 
                     <h3 class="field-title">Recurrent Neural Networks</h3>
 
