--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -14,6 +14,7 @@
       (document.getElementById('graph'))
         .graphData(data)
         .nodeId('id')
+        .nodeRelSize(100)
         .nodeVal('val')
         .nodeLabel('id')
         .nodeAutoColorBy('group')
