[DBG] debug display options

--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -16,7 +16,7 @@
         .nodeId('id')
         .nodeRelSize(4)
         .nodeVal('val')
-        .nodeLabel('id')
+        .nodeLabel('id'+':'+'group')
         .nodeAutoColorBy('group')
         .linkSource('source')
         .linkTarget('target')
