[DBG] fix wrong link in homepage

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <!-- I am interested in a variety of stuff ranging from geometric topology and dynamical systems to Bayesian statistics and machine learning, as well as their applications to neuroscience, genomics, and cognitive sciences. Most recently, I am developing neuroscience-inspired AI systems and applying ML to understand human brains (Neuro &harr; AI).  -->
                 </p>
                 <p class="mb-5 text-primary">
-                    I graduated from the University of Washington, Seattle (UW), as part of the NIH-funded Computational Neuroscience Training Program, with B.S. in Applied & Computational Mathematics and B.A. in Psychology with Honors. I still maintain close collaborations and affliations with <a href="https://systemsbiology.columbia.edu/people/baihan-lin"><u>Columbia Department of Systems Biology</u></a> and <a href="https://amath.washington.edu/people/baihan-lin"><u>UW Department of Applied Mathematics</u></a>.
+                    I graduated from the University of Washington, Seattle (UW), as part of the NIH-funded Computational Neuroscience Training Program, with a B.S. in Applied & Computational Mathematics and a B.A. in Psychology with Honors. I still maintain close collaborations and affliations with <a href="https://systemsbiology.columbia.edu/people/baihan-lin"><u>Columbia Department of Systems Biology</u></a> and <a href="https://amath.washington.edu/people/baihan-lin"><u>UW Department of Applied Mathematics</u></a>.
                 </p>
 
                 <p class="mb-5 text-primary">
@@ -923,7 +923,7 @@
         <p class="mb-5 text-primary">
         <br> Other than these life bits, I play flute and am currently learning Jazz and guitar, well, at least while my neighbors and <a href="https://www.instagram.com/neptunesnaptime/"><u>my cats</u></a> can still bear it. ;) </p>
         <p class="mb-5 text-primary">
-        <br> More bits of life can be found <a href="bits.html"><u><b>here</b></u></a></p>
+        <br> More bits of life can be found <a href="bits"><u><b>here</b></u></a></p>
         </div>
         </section>
         </div>
